--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,14 @@
 /*agregar fuente de Pokemon*/
-#hi{
+header{
   text-align: center;
+  font-size: 3em;
   font-weight: bold;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+h1{
+  font-size: .9 em;
+}
 .cards-distribution {
   display: flex;
   flex-wrap: wrap;
@@ -62,6 +66,13 @@
 
 body{
   background-image: url("pokedex.jpg");
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+}
+
+.search-section{
+  text-align: right;
+  padding: 30px;
+  border: 5px solid#bae1b2;
 }
 
 #kanto{
