--- a/src/style.css
+++ b/src/style.css
@@ -70,6 +70,7 @@ h1{
   position:fixed;
   top: 0px;
   background-image: radial-gradient(black, grey, white);
+  margin-bottom: 20px;
   /* background-color: rgb(0, 0, 0); */
   left: 35%;
   display: none;
