--- a/src/style.css
+++ b/src/style.css
@@ -69,9 +69,9 @@ h1{
   border: solid black 1px;
   position:fixed;
   top: 0px;
-  background-image: radial-gradient(black, grey, white);
   margin-bottom: 20px;
-  /* background-color: rgb(0, 0, 0); */
+  padding-bottom: 20px;
+  background-color: rgb(0, 0, 0);
   left: 35%;
   display: none;
 }
