--- a/src/style.css
+++ b/src/style.css
@@ -65,15 +65,13 @@ h1{
 
 #modal{
   width: 500px;
-  height: 300px;
+  height: 800px;
   border: solid black 1px;
   position:fixed;
   top: 0px;
   margin-bottom: 20px;
   padding-bottom: 20px;
-  color:#FFF;
-  font-size: small;
-  background-color: rgb(0, 0, 0);
+  background-color: #d0d1ff;
   left: 35%;
   display: none;
 }
