--- a/src/style.css
+++ b/src/style.css
@@ -75,7 +75,7 @@ h1{
   padding-bottom: 20px;
   background-color: #ddddfa;
   left: 35%;
-  display: flex;
+  display: none;
 }
 
 .center{
@@ -94,7 +94,7 @@ body{
   background-color: #bae1b2;
   opacity: 0.7;
   border: 5px solid#bae1b2;
-  display: flex;
+  display: none;
 }
 
 /* .search-button{
