--- a/src/style.css
+++ b/src/style.css
@@ -19,8 +19,8 @@ body {
   --white-color: #fff;
   --blue-color: #5791E7;
   --border-radius: 8px;
-  --font-headings: 'Grandstander', cursive;
-  --font-body: 'Nunito', sans-serif;
+  --font-headings: 
+  --font-body: 
   ;
 }
 
