--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ body {
   height: 100%;
   width: 100%;
   background-color: var(--black-color);
-  background-image: url("./img/rickandmorty.jpg");
+  background-image: url("./img/rickandmorty2.jpg");
 }
 
 /* Colores y fuentes utilizados */
